Bug 101063 - Configuration dialog is very confusing and inconsistent
Summary: Configuration dialog is very confusing and inconsistent
Status: RESOLVED FIXED
Alias: None
Product: kfourinline
Classification: Applications
Component: general (other bugs)
Version First Reported In: 1.40
Platform: Debian testing Linux
: NOR normal
Target Milestone: ---
Assignee: martin
URL:
Keywords: junior-jobs
Depends on:
Blocks:
 
Reported: 2005-03-07 22:54 UTC by Ronny Standtke
Modified: 2024-01-24 12:04 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ronny Standtke 2005-03-07 22:54:44 UTC
Version:           1.10 (using KDE KDE 3.3.2)
Installed from:    Debian testing/unstable Packages

In the configuration dialog there are five optically disjoined panels to configure the players. In one panel the starting player color can be set. In the next one the name of Player 1 and Player 2 can be set. First I thought that the starting player is Player 1. But actually Player 1 is always the red one.

Then you can configure the Computer difficulty even if you did not configure any computer player.

I find the layout of this dialog very confusing and inconsistent. May I propose a different layout for the config dialog?

Please use just two titled panels, one for the red player and one for the yellow player. On both panels add just the following:

- a label "Name" and a belonging textfield
- a label "Player" and a combobox with the entries:
    - Human using Mouse
    - Human using Keyboard
    - Computer (Very Weak)
    - Computer (Weak)
    - Computer (Moderate)
    - Computer (Strong)
    - Computer (Very Strong)
    - Computer (Almost Unbeatable)
- a radio button "Starts the Game"

This is much simpler and not so confusing like the current version. Sorry for the rant, comments are welcome :-)

Greetings & Thank you

Ronny Standtke
Comment 1 disabled account 2010-01-18 01:10:42 UTC
This bug is about the product kwin4, although the bug report reads differently, it seems to be about some ancient KDE 3 game, this bug clearly needs clarification. Should the report be marked as invalid?
Comment 2 disabled account 2010-01-19 04:09:39 UTC
(In reply to comment #1)
> This bug is about the product kwin4, although the bug report reads differently,
> it seems to be about some ancient KDE 3 game, this bug clearly needs
> clarification. Should the report be marked as invalid?

I'm sorry, I thought this is about the window manager, this bug is still valid in KDE SC 4.3.90 for kfourinline
Comment 3 Denis Falqueto 2018-06-04 00:29:28 UTC
This bug is not valid anymore, as in KDE Applications 18.04.1. There's no dialog window anymore.
Comment 4 Albert Astals Cid 2018-06-04 21:29:08 UTC
@Denis what do you mean? There's clearly still a configuration dialog, isn't there?
Comment 5 Bug Janitor Service 2024-01-09 22:09:06 UTC
A possibly relevant merge request was started @ https://invent.kde.org/games/kfourinline/-/merge_requests/16
Comment 6 Carl Schwan 2024-01-24 12:04:26 UTC
Git commit e15df3044de5d6bb54bc207150a0090993fafe4a by Carl Schwan, on behalf of Benedikt Thiemer.
Committed on 24/01/2024 at 13:01.
Pushed by carlschwan into branch 'master'.

Rework the configuration dialogue

This may fix

The old configuration dialogue was
very cluttered. The settings were
grouped in an unintuitive way.
This commit changes the dialogue to
be more easy to understand by
grouping all settings by color.

M  +7    -9    src/kwin4.cpp
M  +182  -151  src/settings.ui

https://invent.kde.org/games/kfourinline/-/commit/e15df3044de5d6bb54bc207150a0090993fafe4a