Rework the configuration dialogue

This may fix
BUG: 101063

The old configuration dialogue was
very cluttered. The settings were
grouped in an unintuitive way.
This commit changes the dialogue to
be more easy to understand by
grouping all settings by color.